<resources>
    <string name="app_name">Side</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="tos">By signing in, you accept <a href="https://s3.eu-central-1.amazonaws.com/weslash-static/pdfs/cgu-uk.pdf">general terms of use</a>.</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="title_privileges">Privileges</string>
    <string name="title_account">Account</string>
    <string name="title_activity_pay">PayActivity</string>

    <string name="onboarding_forgot_password_button_cancel">Cancel</string>
    <string name="onboarding_forgot_password_button_reset_password">Reset my password</string>
    <string name="onboarding_home_help">Help</string>
    <string name="onboarding_home_signin">I already have an account</string>
    <string name="onboarding_home_signup">Sign up</string>
    <string name="onboarding_home_tip_signup">To sign up, head to &lt;a href=\"https://www.side.co\">Side.co&lt;/a></string>
    <string name="onboarding_loading_jobs_title">Tasks are loading</string>
    <string name="onboarding_post_forgot_password_subtitle">We have sent you an email to reset your password.</string>
    <string name="onboarding_post_forgot_password_title">Check your inbox!</string>
    <string name="onboarding_postsignup_subtitle">We have sent you an email. Complete your online registration to get access to all of our current tasks.</string>
    <string name="onboarding_postsignup_title">"Thank you. We're looking forward to seeing you on Side again"</string>
    <string name="onboarding_signin_button_signin">Sign In</string>
    <string name="onboarding_signin_field_email_title">Email</string>
    <string name="onboarding_signin_field_password_title">Password</string>
    <string name="onboarding_signin_link_forgotten_password">Forgot your Password?</string>
    <string name="onboarding_signin_link_signup">Sign up</string>
    <string name="onboarding_signin_title">Log in</string>
    <string name="onboarding_signin_tos">By signing in, you accept <a href="#">general terms of use</a>.</string>
    <string name="onboarding_signup_button_signup">Sign up</string>
    <string name="onboarding_signup_link_signin">Sign in</string>
    <string name="onboarding_signup_subtitle">"You don't have a Side account yet? Enter your email address or go directly to the Side sign up page. The Side mobile app will then give you access to the tasks currently available."</string>
    <string name="onboarding_signup_title">Welcome!</string>
    <string name="onboarding_signup_tos">By signing up, you accept the &lt;a href=\"https://s3.eu-central-1.amazonaws.com/weslash-static/pdfs/cgu-uk.pdf\">general terms of use&lt;/a>.</string>
    <string name="onboarding_tabbar_chat_title">Chat</string>
    <string name="onboarding_tabbar_myjobs_title">My tasks</string>
    <string name="onboarding_tabbar_profile_title">Profile</string>
    <string name="onboarding_tabbar_tasks_title">Tasks</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_subtext">Welcome! Before you can start working on Hustle, we\'ll need you to fill in your profile and book a call with our team.</string>


</resources>
