<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/side_blue"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/login_progress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:progressDrawable="@drawable/custom_progressbar"
        android:visibility="gone" />

    <TextView
        android:id="@+id/loadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_progress"
        android:layout_centerHorizontal="true"
        android:text="@string/onboarding_loading_jobs_title"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Heavy"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:visibility="gone" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/side_blue"
        app:layout_scrollFlags="enterAlways|scroll">

        <TextView
            android:id="@+id/titleToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/resize20dp"
            android:text="@string/onboarding_signin_link_signup"
            android:textAppearance="@style/TextAppearance.Book"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/resize14sp"
            android:visibility="visible" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/loginform"
        android:layout_width="fill_parent"
        android:layout_height="450dp"
        android:layout_below="@id/toolbar"
        android:background="@color/side_blue"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/include5"
                layout="@layout/include_login_email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="@dimen/resize32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/connectTextView"
                app:layout_constraintTop_toBottomOf="@id/connectTextView" />

            <include
                android:id="@+id/include6"
                layout="@layout/include_login_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/resize26dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@id/include5"
                app:layout_constraintRight_toRightOf="@id/include5"
                app:layout_constraintTop_toBottomOf="@id/include5" />

            <TextView
                android:id="@+id/forgottenPasswordTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/resize16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/onboarding_signin_link_forgotten_password"
                android:textAppearance="@style/TextAppearance.Roman"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/resize14sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/include6" />

            <TextView
                android:id="@+id/signInTosTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autoLink="web"
                android:clickable="true"
                android:textAppearance="@style/TextAppearance.Roman"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textSize="@dimen/resize14sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgottenPasswordTextView" />

            <TextView
                android:id="@+id/connectTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="@dimen/resize16dp"
                android:layout_marginEnd="12dp"
                android:text="@string/onboarding_signin_title"
                android:textAppearance="@style/TextAppearance.Heavy"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/resize36sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/connectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/resize24dp"
                android:background="@drawable/background_send_button"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="@dimen/resize20dp"
                android:paddingTop="@dimen/buttonHeight"
                android:paddingEnd="@dimen/resize20dp"
                android:paddingBottom="@dimen/buttonHeight"
                app:layout_constraintRight_toRightOf="@id/include6"
                app:layout_constraintTop_toBottomOf="@id/signInTosTextView">

                <TextView
                    android:id="@+id/connection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:text="@string/onboarding_signin_button_signin"
                    android:textAppearance="@style/TextAppearance.Medium"
                    android:textColor="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/sendToOrgaImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"
                    android:layout_weight="1.0"
                    app:srcCompat="@drawable/arrow_2" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>